--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-	<head></head>
+	<head>
+		<style>img {max-width: 100%;}</style>
+	</head>
 	<body>
 		<input id="imageInput" 
 		type="file" 
